# tvl

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  VERSION  environment.yml  requirements.txt  run_tests_docker.sh  setup.py
benchmarks/: read_frames.py
data/: board_game-h264-cropped.mkv  diving-h264.mkv
examples/: async_dataloading.py  gui.py  video_player.py
ext/: MemManager.cpp  MemManager.h  TvlnvFrameReader.cpp  TvlnvFrameReader.h  example.py  tvlnv.i  tvlnv.py  tvlnv_wrap.c  tvlnv_wrap.cpp  tvlnv_wrap.h
ext/NvCodec/NvDecoder/: NvDecoder.cpp  NvDecoder.h
ext/Utils/: FFmpegDemuxer.h  NvCodecUtils.h
ext/nvidia/NvDecoder/: NvDecoder.h
ext/nvidia/Utils/: FFmpegDemuxer.h  NvCodecUtils.h
src/: tvlnv.py
src/tvl/: __init__.py  async.py  backend.py  testing.py  transforms.py
src/tvl/backends/: __init__.py  common.py  nvdec.py  pyav.py
tests/: conftest.py  test_nvdec.py  test_opencv.py  test_pyav.py  test_transforms.py  test_tvl.py
tests/data/: board_game.mkv
tvl_backends/tests/: conftest.py  test_backends.py
tvl_backends/tvl-backends-fffr/: .gitignore  CMakeLists.txt  pyproject.toml  requirements.txt  setup.py
tvl_backends/tvl-backends-fffr/ext/: CMakeLists.txt
tvl_backends/tvl-backends-fffr/ext/FFFrameReader/: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
tvl_backends/tvl-backends-fffr/ext/FFFrameReader/include/: FFFRDecoderContext.h  FFFRFrame.h  FFFRStream.h  FfFrameReader.h
tvl_backends/tvl-backends-fffr/ext/FFFrameReader/source/: FFFR.cpp  FFFRDecoderContext.cpp  FFFRFrame.cpp  FFFRStream.cpp
tvl_backends/tvl-backends-fffr/ext/FFFrameReader/test/: FFFRTestData.h  FFFRTestDecode.cpp  FFFRTestFrame.cpp  FFFRTestStream.cpp
tvl_backends/tvl-backends-fffr/ext/bindings/: CMakeLists.txt  ImageAllocator.h  MemManager.h  TvFFFrameReader.cpp  TvFFFrameReader.h  pyfffr.i
tvl_backends/tvl-backends-fffr/src/tvl_backends/fffr/: __init__.py  memory.py
tvl_backends/tvl-backends-fffr/tests/: conftest.py  test_fffr_backend.py  test_memory.py  test_pyfffr.py
tvl_backends/tvl-backends-nvdec/: CMakeLists.txt  pyproject.toml  requirements.txt  setup.py
tvl_backends/tvl-backends-nvdec/ext/: CMakeLists.txt  TvlnvFrameReader.cpp  TvlnvFrameReader.h  tvlnv.i  tvlnv_wrap.cpp  tvlnv_wrap.h
tvl_backends/tvl-backends-nvdec/ext/nvidia/: README.md
tvl_backends/tvl-backends-nvdec/ext/nvidia/NvDecoder/: NvDecoder.cpp  NvDecoder.h
tvl_backends/tvl-backends-nvdec/ext/nvidia/Utils/: FFmpegDemuxer.h
tvl_backends/tvl-backends-nvdec/ext/swig/: CMakeLists.txt
tvl_backends/tvl-backends-nvdec/src/: tvlnv.py
tvl_backends/tvl-backends-nvdec/src/tvl_backends/nvdec/: __init__.py
tvl_backends/tvl-backends-nvdec/tests/: conftest.py  test_nvdec.py
tvl_backends/tvl-backends-nvvl/: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.py
tvl_backends/tvl-backends-nvvl/ext/: VideoInfo.cpp  VideoInfo.h  tvlnvvl.i  tvlnvvl.py  tvlnvvl_wrap.cpp  tvlnvvl_wrap.h
tvl_backends/tvl-backends-nvvl/src/: tvlnvvl.py
tvl_backends/tvl-backends-nvvl/src/tvl_backends/nvvl/: __init__.py
tvl_backends/tvl-backends-nvvl/tests/: conftest.py  test_nvvl.py
tvl_backends/tvl-backends-opencv/: requirements.txt  setup.py
tvl_backends/tvl-backends-opencv/src/tvl_backends/opencv/: __init__.py
tvl_backends/tvl-backends-opencv/tests/: conftest.py  test_opencv.py
tvl_backends/tvl-backends-pyav/: VERSION  requirements.txt  setup.py
tvl_backends/tvl-backends-pyav/src/tvl_backends/pyav/: __init__.py
tvl_backends/tvl-backends-pyav/tests/: conftest.py  test_pyav.py
